[gd_scene load_steps=36 format=2]

[ext_resource path="res://circuits/poland_circuit.gd" type="Script" id=1]
[ext_resource path="res://ui/circuit_control.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/materials/grass.material" type="Material" id=3]
[ext_resource path="res://cameras/chase_camera.tscn" type="PackedScene" id=4]
[ext_resource path="res://cameras/zoom_camera.tscn" type="PackedScene" id=5]
[ext_resource path="res://circuits/road_start.tscn" type="PackedScene" id=6]
[ext_resource path="res://circuits/road_straight_long.tscn" type="PackedScene" id=7]
[ext_resource path="res://circuits/road_corner_large_border.tscn" type="PackedScene" id=8]
[ext_resource path="res://circuits/road_straight.tscn" type="PackedScene" id=9]
[ext_resource path="res://circuits/road_ramp_long_wall.tscn" type="PackedScene" id=10]
[ext_resource path="res://circuits/road_curved.tscn" type="PackedScene" id=11]
[ext_resource path="res://circuits/road_straight_bridge.tscn" type="PackedScene" id=12]
[ext_resource path="res://circuits/road_corner_large_sand.tscn" type="PackedScene" id=13]
[ext_resource path="res://circuits/forest.tscn" type="PackedScene" id=14]
[ext_resource path="res://circuits/barrier_wall.tscn" type="PackedScene" id=15]
[ext_resource path="res://circuits/pits_office_roof.tscn" type="PackedScene" id=16]
[ext_resource path="res://circuits/pits_office.tscn" type="PackedScene" id=17]
[ext_resource path="res://circuits/fence_curved.tscn" type="PackedScene" id=18]
[ext_resource path="res://circuits/overhead_round_colored.tscn" type="PackedScene" id=19]

[sub_resource type="ProceduralSky" id=1]
sky_top_color = Color( 0.729412, 0.811765, 0.854902, 1 )
ground_bottom_color = Color( 0.439216, 0.584314, 0.545098, 1 )
sun_color = Color( 0.87451, 0.823529, 0.823529, 1 )
sun_latitude = 3.0
sun_energy = 3.0

[sub_resource type="Environment" id=2]
resource_local_to_scene = true
background_mode = 2
background_sky = SubResource( 1 )

[sub_resource type="PlaneMesh" id=3]
material = ExtResource( 3 )
size = Vector2( 200, 200 )

[sub_resource type="ConvexPolygonShape" id=4]
points = PoolVector3Array( 100, 0, 100, -100, 0, 100, -100, 0, -100, 100, 0, -100 )

[sub_resource type="BoxShape" id=17]
extents = Vector3( 2, 0.001, 15 )

[sub_resource type="PlaneMesh" id=5]
resource_local_to_scene = true
size = Vector2( 30, 20 )

[sub_resource type="SpatialMaterial" id=6]
resource_local_to_scene = true
resource_name = "grass"
vertex_color_use_as_albedo = true
albedo_color = Color( 0.585568, 0.774056, 0.688203, 1 )
emission_enabled = true
emission = Color( 0, 0, 0, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="PlaneMesh" id=7]
resource_local_to_scene = true
size = Vector2( 15, 50 )

[sub_resource type="SpatialMaterial" id=8]
resource_local_to_scene = true
resource_name = "grass"
vertex_color_use_as_albedo = true
albedo_color = Color( 0.585568, 0.774056, 0.688203, 1 )
emission_enabled = true
emission = Color( 0, 0, 0, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="PlaneMesh" id=9]
resource_local_to_scene = true
size = Vector2( 50, 150 )

[sub_resource type="SpatialMaterial" id=10]
resource_local_to_scene = true
resource_name = "grass"
vertex_color_use_as_albedo = true
albedo_color = Color( 0.585568, 0.774056, 0.688203, 1 )
emission_enabled = true
emission = Color( 0, 0, 0, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="PlaneMesh" id=11]
resource_local_to_scene = true
size = Vector2( 25, 150 )

[sub_resource type="SpatialMaterial" id=12]
resource_local_to_scene = true
resource_name = "grass"
vertex_color_use_as_albedo = true
albedo_color = Color( 0.585568, 0.774056, 0.688203, 1 )
emission_enabled = true
emission = Color( 0, 0, 0, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="Curve3D" id=14]
_data = {
"points": PoolVector3Array( 0, 0, 0, 0, 0, 0, 2.33932, 0, -5.40645, 0, 0, 0, 0, 0, 0, 2.42234, 0, -29.4087, 0, 0, 0, 0, 0, 0, 4.1798, 0, -34.704, 0, 0, 0, 0, 0, 0, 9.48766, 0, -37.8111, 0, 0, 0, 0, 0, 0, 19.5856, 0, -37.5521, 0, 0, 0, 0, 0, 0, 30.0718, 0, -40.0766, 0, 0, 0, 0, 0, 0, 35.7681, 0, -40.2061, 0, 0, 0, 0, 0, 0, 41.0112, 0, -37.099 ),
"tilts": PoolRealArray( 0, 0, 0, 0, 0, 0, 0, 0 )
}

[sub_resource type="Curve3D" id=15]
_data = {
"points": PoolVector3Array( 0, 0, 0, 0, 0, 0, 42.8884, 0, -31.8559, 0, 0, 0, 0, 0, 0, 44.9388, 0, -23.1588, 0, 0, 0, 0, 0, 0, 45.0259, 0, 47.13 ),
"tilts": PoolRealArray( 0, 0, 0 )
}

[sub_resource type="Curve3D" id=16]
_data = {
"points": PoolVector3Array( 0, 0, 0, 0, 0, 0, 45.8069, 0, 50.744, 0, 0, 0, 0, 0, 0, 52.9294, 0, 55.0048, 0, 0, 0, 0, 0, 0, 59.9917, 0, 47.8315, 0, 0, 0, 0, 0, 0, 59.416, 0, 27.9137, 0, 0, 0, 0, 0, 0, 58.0955, 0, 7.83385, 0, 0, 0, 0, 0, 0, 50.7669, 0, 0.877176, 0, 0, 0, 0, 0, 0, 36.9223, 0, 2.34816, 0, 0, 0, 0, 0, 0, 33.3746, 0, 9.70309, 0, 0, 0, 0, 0, 0, 33.4179, 0, 19.3943, 0, 0, 0, 0, 0, 0, 33.4179, 0, 30.2536, 0, 0, 0, 0, 0, 0, 25.8466, 0, 37.522, 0, 0, 0, 0, 0, 0, 10.4445, 0, 35.9645, 0, 0, 0, 0, 0, 0, 2.70022, 0, 10.7847 ),
"tilts": PoolRealArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 )
}

[node name="PolandCircuit" type="Spatial"]
script = ExtResource( 1 )

[node name="CircuitControl" parent="." instance=ExtResource( 2 )]

[node name="ZoomCamera" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 17.347, 35, 35 )
current = true

[node name="ChaseCamera" parent="." instance=ExtResource( 4 )]

[node name="World" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -0.866026, 0.5, 0, -0.5, -0.866026, 0, 35, 35 )
light_color = Color( 0.87451, 0.823529, 0.823529, 1 )
light_specular = 7.0
shadow_enabled = true
shadow_color = Color( 0.321569, 0.286275, 0.286275, 1 )

[node name="Ground" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 32.2686, 0, 0 )
visible = false

[node name="Mesh" type="MeshInstance" parent="Ground"]
mesh = SubResource( 3 )

[node name="Collision" type="CollisionShape" parent="Ground"]
shape = SubResource( 4 )

[node name="P1" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.362, 0.057, 1.23 )

[node name="P2" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.638, 0.057, 3.73 )

[node name="P3" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.362, 0.057, 6.23 )

[node name="P4" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.638, 0.057, 8.73 )

[node name="Bridge" type="StaticBody" parent="."]

[node name="Collision" type="CollisionShape" parent="Bridge"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 45, 2.55, 12.5 )
shape = SubResource( 17 )

[node name="RoadStart" parent="." instance=ExtResource( 6 )]

[node name="RoadStraightLong1" parent="." instance=ExtResource( 7 )]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0.01, -10 )

[node name="RoadStraightLong2" parent="." instance=ExtResource( 7 )]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0.01, -20 )

[node name="RoadCornerLargeBorder1" parent="." instance=ExtResource( 8 )]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0.01, -30 )

[node name="RoadStraightLong3" parent="." instance=ExtResource( 7 )]
transform = Transform( -2.18557e-07, 0, -5, 0, 5, 0, 5, 0, -2.18557e-07, 10, 0.01, -40 )

[node name="RoadCurved1" parent="." instance=ExtResource( 11 )]
transform = Transform( -2.18557e-07, 0, -5, 0, 5, 0, 5, 0, -2.18557e-07, 20, 0.01, -40 )

[node name="RoadStraight1" parent="." instance=ExtResource( 9 )]
transform = Transform( -2.18557e-07, 0, -5, 0, 5, 0, 5, 0, -2.18557e-07, 30, 0.01, -42.5 )

[node name="RoadCornerLargeBorder2" parent="." instance=ExtResource( 8 )]
transform = Transform( -2.18557e-07, 0, -5, 0, 5, 0, 5, 0, -2.18557e-07, 35, 0.01, -42.5 )

[node name="RoadCurved2" parent="." instance=ExtResource( 11 )]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 42.5, 0.01, -22.5 )

[node name="RoadRampLongWall1" parent="." instance=ExtResource( 10 )]
transform = Transform( -5, 0, -1.50996e-06, 0, 5, 0, 7.54979e-07, 0, -10, 47.5, 0.01, -22.5 )

[node name="RoadStraightLong4" parent="." instance=ExtResource( 7 )]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 42.5, 2.51, 7.5 )

[node name="RoadStraightBridge1" parent="." instance=ExtResource( 12 )]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 42.5, 0.01, 12.5 )

[node name="RoadStraightLong5" parent="." instance=ExtResource( 7 )]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 42.5, 2.51, 22.5 )

[node name="RoadStraightBridge2" parent="." instance=ExtResource( 12 )]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 42.5, 0.01, 27.5 )

[node name="RoadRampLongWall2" parent="." instance=ExtResource( 10 )]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 10, 42.5, 0.01, 47.5 )

[node name="RoadCornerLargeBorder3" parent="." instance=ExtResource( 8 )]
transform = Transform( -2.18557e-07, 0, 5, 0, 5, 0, -5, 0, -2.18557e-07, 52.5, 0.01, 57.5 )

[node name="RoadCornerLargeBorder4" parent="." instance=ExtResource( 8 )]
transform = Transform( -5, 0, -4.37114e-07, 0, 5, 0, 4.37114e-07, 0, -5, 62.5, 0.01, 47.5 )

[node name="RoadStraightLong6" parent="." instance=ExtResource( 7 )]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 57.5, 0.01, 47.5 )

[node name="RoadStraightLong7" parent="." instance=ExtResource( 7 )]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 57.5, 0.01, 37.5 )

[node name="RoadCurved3" parent="." instance=ExtResource( 11 )]
transform = Transform( -5, 0, -4.37114e-07, 0, 5, 0, 4.37114e-07, 0, -5, 60, 0.01, 17.5 )

[node name="RoadStraightLong8" parent="." instance=ExtResource( 7 )]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 55, 0.01, 17.5 )

[node name="RoadCornerLargeSand1" parent="." instance=ExtResource( 13 )]
transform = Transform( -2.18557e-07, 0, -5, 0, 5, 0, 5, 0, -2.18557e-07, 50, 0.01, -2.5 )

[node name="RoadCurved4" parent="." instance=ExtResource( 11 )]
transform = Transform( -2.18557e-07, 0, 5, 0, 5, 0, -5, 0, -2.18557e-07, 50, 0.01, 2.5 )

[node name="RoadCornerLargeSand2" parent="." instance=ExtResource( 13 )]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 30, 0.01, 10 )

[node name="RoadStraightLong9" parent="." instance=ExtResource( 7 )]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 30.0339, -0.0207541, 19.9941 )

[node name="RoadStraightLong10" parent="." instance=ExtResource( 7 )]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 30, 0.01, 30 )

[node name="RoadCornerLargeBorder5" parent="." instance=ExtResource( 8 )]
transform = Transform( -5, 0, -4.37114e-07, 0, 5, 0, 4.37114e-07, 0, -5, 35, 0.01, 30 )

[node name="RoadStraightLong11" parent="." instance=ExtResource( 7 )]
transform = Transform( -2.18557e-07, 0, 5, 0, 5, 0, -5, 0, -2.18557e-07, 25, 0.01, 40 )

[node name="RoadCornerLargeBorder6" parent="." instance=ExtResource( 8 )]
transform = Transform( -2.18557e-07, 0, 5, 0, 5, 0, -5, 0, -2.18557e-07, 15, 0.01, 40 )

[node name="RoadCurved5" parent="." instance=ExtResource( 11 )]
transform = Transform( -5, 0, -4.37114e-07, 0, 5, 0, 4.37114e-07, 0, -5, 7.5, 0.01, 20 )

[node name="RoadCurved6" parent="." instance=ExtResource( 11 )]
transform = Transform( -5, 0, -4.37114e-07, 0, 5, 0, 4.37114e-07, 0, -5, 5, 0.01, 10 )

[node name="Forest1" parent="." instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 23.2385, 0, -19.3413 )
mesh = SubResource( 5 )
material/0 = SubResource( 6 )
count = 100

[node name="Forest2" parent="." instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 19.2845, 0, 1.89673 )
mesh = SubResource( 7 )
material/0 = SubResource( 8 )
count = 100

[node name="Forest3" parent="." instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -34.7811, 0, 2.3091 )
mesh = SubResource( 9 )
material/0 = SubResource( 10 )
count = 500

[node name="Forest4" parent="." instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 85.6927, 0.0509186, 0 )
mesh = SubResource( 11 )
material/0 = SubResource( 12 )
count = 500

[node name="Forest5" parent="." instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 32.3231, 0, -55.1876 )
mesh = SubResource( 5 )
material/0 = SubResource( 6 )
count = 100

[node name="Forest6" parent="." instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 24.8621, 0, 55.1803 )
mesh = SubResource( 5 )
material/0 = SubResource( 6 )
count = 100

[node name="BarrierWall1" parent="." instance=ExtResource( 15 )]
transform = Transform( -1.31134e-06, 0, 5, 0, 5, 0, -30, 0, -2.18557e-07, 47.34, 2.51, 27.5 )

[node name="BarrierWall2" parent="." instance=ExtResource( 15 )]
transform = Transform( -1.31134e-06, 0, -5, 0, 5, 0, 30, 0, -2.18557e-07, 42.6586, 2.51, -2.5 )

[node name="PitsOffice1" parent="." instance=ExtResource( 17 )]
transform = Transform( -2.18557e-07, 0, 5, 0, 5, 0, -5, 0, -2.18557e-07, -3, 0, 0 )

[node name="PitsOffice2" parent="." instance=ExtResource( 17 )]
transform = Transform( -2.18557e-07, 0, 5, 0, 5, 0, -5, 0, -2.18557e-07, -3, 0, 4.99985 )

[node name="PitsOffice3" parent="." instance=ExtResource( 17 )]
transform = Transform( -2.18557e-07, 0, 5, 0, 5, 0, -5, 0, -2.18557e-07, -3, 0, -5 )

[node name="PitsOfficeRoof1" parent="." instance=ExtResource( 16 )]
transform = Transform( -2.18557e-07, 0, 5, 0, 5, 0, -5, 0, -2.18557e-07, -3, 0, 10 )

[node name="PitsOfficeRoof2" parent="." instance=ExtResource( 16 )]
transform = Transform( -2.18557e-07, 0, 5, 0, 5, 0, -5, 0, -2.18557e-07, -3, 0, -10 )

[node name="FenceCurved1" parent="." instance=ExtResource( 18 )]
transform = Transform( -2.18557e-06, 0, 5, 0, 5, 0, -50, 0, -2.18557e-07, -3, 0, 60 )

[node name="FenceCurved10" parent="." instance=ExtResource( 18 )]
transform = Transform( -2.40413e-06, 0, 5, 0, 5, 0, -55, 0, -2.18557e-07, -3, 0, -15 )

[node name="FenceCurved2" parent="." instance=ExtResource( 18 )]
transform = Transform( -8.74228e-07, 0, 5, 0, 5, 0, -20, 0, -2.18557e-07, -3, 0, 80 )

[node name="FenceCurved3" parent="." instance=ExtResource( 18 )]
transform = Transform( -20, 0, -4.37114e-07, 0, 5, 0, 1.74846e-06, 0, -5, 17.4172, 0, 80.419 )

[node name="FenceCurved4" parent="." instance=ExtResource( 18 )]
transform = Transform( -50, 0, 4.37114e-07, 0, 5, 0, -4.37114e-06, 0, -5, 67.417, 0, 80.419 )

[node name="FenceCurved5" parent="." instance=ExtResource( 18 )]
transform = Transform( -2.18557e-06, 0, -5, 0, 5, 0, 50, 0, -2.18557e-07, 67.83, 0, 30 )

[node name="FenceCurved6" parent="." instance=ExtResource( 18 )]
transform = Transform( -2.18557e-06, 0, -5, 0, 5, 0, 50, 0, -2.18557e-07, 67.83, 0, -20 )

[node name="FenceCurved7" parent="." instance=ExtResource( 18 )]
transform = Transform( -2.18557e-06, 0, -5, 0, 5, 0, 50, 0, -2.18557e-07, 67.83, 0, -70 )

[node name="FenceCurved8" parent="." instance=ExtResource( 18 )]
transform = Transform( 50, 0, 0, 0, 5, 0, 0, 0, 5, 17.41, 0, -70.42 )

[node name="FenceCurved9" parent="." instance=ExtResource( 18 )]
transform = Transform( 20, 0, 0, 0, 5, 0, 0, 0, 5, -2.5, 0, -70.42 )

[node name="OverheadRoundColored" parent="." instance=ExtResource( 19 )]
transform = Transform( -2.18557e-07, 0, 30, 0, 5, 0, -5, 0, -1.31134e-06, 24.9508, 0, 42 )

[node name="Path0_7" type="Path" parent="."]
curve = SubResource( 14 )

[node name="PathFollow" type="PathFollow" parent="Path0_7"]
transform = Transform( -0.999994, 0, 0.00345841, 0, 1, 0, -0.00345841, 0, -0.999994, 2.33932, 0, -5.40645 )
rotation_mode = 4
loop = false

[node name="Path8_14" type="Path" parent="."]
curve = SubResource( 15 )

[node name="PathFollow" type="PathFollow" parent="Path8_14"]
transform = Transform( 0.973314, 0, 0.229476, 0, 1, 0, -0.229476, 0, 0.973314, 42.8884, 0, -31.8559 )
rotation_mode = 4
loop = false

[node name="Path15_30" type="Path" parent="."]
curve = SubResource( 16 )

[node name="PathFollow" type="PathFollow" parent="Path15_30"]
transform = Transform( 0.51337, 0, 0.858168, 0, 1, 0, -0.858168, 0, 0.51337, 45.8069, 0, 50.744 )
rotation_mode = 4
loop = false

[connection signal="body_entered" from="RoadStart" to="." method="_on_race_car_entered" binds= [ 0 ]]
[connection signal="body_entered" from="RoadStraightLong1" to="." method="_on_race_car_entered" binds= [ 1 ]]
[connection signal="body_entered" from="RoadStraightLong2" to="." method="_on_race_car_entered" binds= [ 2 ]]
[connection signal="body_entered" from="RoadCornerLargeBorder1" to="." method="_on_race_car_entered" binds= [ 3 ]]
[connection signal="body_entered" from="RoadStraightLong3" to="." method="_on_race_car_entered" binds= [ 4 ]]
[connection signal="body_entered" from="RoadCurved1" to="." method="_on_race_car_entered" binds= [ 5 ]]
[connection signal="body_entered" from="RoadStraight1" to="." method="_on_race_car_entered" binds= [ 6 ]]
[connection signal="body_entered" from="RoadCornerLargeBorder2" to="." method="_on_race_car_entered" binds= [ 7 ]]
[connection signal="body_entered" from="RoadCurved2" to="." method="_on_race_car_entered" binds= [ 8 ]]
[connection signal="body_entered" from="RoadRampLongWall1" to="." method="_on_race_car_entered" binds= [ 9 ]]
[connection signal="body_entered" from="RoadStraightLong4" to="." method="_on_race_car_entered" binds= [ 10 ]]
[connection signal="body_entered" from="RoadStraightBridge1" to="." method="_on_race_car_entered" binds= [ 11 ]]
[connection signal="body_entered" from="RoadStraightLong5" to="." method="_on_race_car_entered" binds= [ 12 ]]
[connection signal="body_entered" from="RoadStraightBridge2" to="." method="_on_race_car_entered" binds= [ 13 ]]
[connection signal="body_entered" from="RoadRampLongWall2" to="." method="_on_race_car_entered" binds= [ 14 ]]
[connection signal="body_entered" from="RoadCornerLargeBorder3" to="." method="_on_race_car_entered" binds= [ 15 ]]
[connection signal="body_entered" from="RoadCornerLargeBorder4" to="." method="_on_race_car_entered" binds= [ 16 ]]
[connection signal="body_entered" from="RoadStraightLong6" to="." method="_on_race_car_entered" binds= [ 17 ]]
[connection signal="body_entered" from="RoadStraightLong7" to="." method="_on_race_car_entered" binds= [ 18 ]]
[connection signal="body_entered" from="RoadCurved3" to="." method="_on_race_car_entered" binds= [ 19 ]]
[connection signal="body_entered" from="RoadStraightLong8" to="." method="_on_race_car_entered" binds= [ 20 ]]
[connection signal="body_entered" from="RoadCornerLargeSand1" to="." method="_on_race_car_entered" binds= [ 21 ]]
[connection signal="body_entered" from="RoadCurved4" to="." method="_on_race_car_entered" binds= [ 22 ]]
[connection signal="body_entered" from="RoadCornerLargeSand2" to="." method="_on_race_car_entered" binds= [ 23 ]]
[connection signal="body_entered" from="RoadStraightLong9" to="." method="_on_race_car_entered" binds= [ 24 ]]
[connection signal="body_entered" from="RoadStraightLong10" to="." method="_on_race_car_entered" binds= [ 25 ]]
[connection signal="body_entered" from="RoadCornerLargeBorder5" to="." method="_on_race_car_entered" binds= [ 26 ]]
[connection signal="body_entered" from="RoadStraightLong11" to="." method="_on_race_car_entered" binds= [ 27 ]]
[connection signal="body_entered" from="RoadCornerLargeBorder6" to="." method="_on_race_car_entered" binds= [ 28 ]]
[connection signal="body_entered" from="RoadCurved5" to="." method="_on_race_car_entered" binds= [ 29 ]]
[connection signal="body_entered" from="RoadCurved6" to="." method="_on_race_car_entered" binds= [ 30 ]]
